# prj23

./: .clang-format  .git-blame-ignore-revs  .gitignore  README.md  generate_clangd.sh
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/atm90e32_interface/: CMakeLists.txt
firmware/components/board_manager/: CMakeLists.txt
firmware/components/command_handler/: CMakeLists.txt
firmware/components/config_manager/: CMakeLists.txt
firmware/components/ha_discovery/: CMakeLists.txt
firmware/components/mdns_manager/: CMakeLists.txt  idf_component.yml
firmware/components/mqtt_manager/: CMakeLists.txt
firmware/components/ota_manager/: CMakeLists.txt
firmware/components/sensor_manager/: CMakeLists.txt
firmware/components/setup_server/: CMakeLists.txt  index.html
firmware/components/setup_server/include/: setup_server.hpp
firmware/components/setup_server/src/: setup_server.cpp
firmware/components/setup_server/web/src/: index.html  main.ts
firmware/components/web_server/: CMakeLists.txt  index.html
firmware/components/web_server/include/: web_server.hpp
firmware/components/web_server/src/: web_server.cpp
firmware/components/web_server/web/: build.ts  index.html  package.json  tsconfig.json
firmware/components/web_server/web/src/: index.html  main.ts  style.css
firmware/components/wifi_manager/: CMakeLists.txt  (+1 more)
firmware/main/: CMakeLists.txt  main.cpp
hardware/mainboard/: mainboard.kicad_pcb  mainboard.kicad_pro  mainboard.kicad_sch  metering_block.kicad_sch  sym-lib-table  voltage_divider.kicad_sch
(+31 files in other folders)
